fix animation flicker

--- a/src/modals/Intro/Intro.module.css
+++ b/src/modals/Intro/Intro.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: inherit;
     h1 {
         margin-bottom: 100px;
     }
